@@ -5,7 +5,8 @@ module ElasticAPM
   class GRPC
     # @api private
     class ClientInterceptor < ::GRPC::ClientInterceptor
-      TYPE = 'external.grpc'
+      TYPE = 'external'
+      SUBTYPE = 'grpc'
 
       # rubocop:disable Lint/UnusedMethodArgument
       def request_response(request:, call:, method:, metadata:)
@@ -13,11 +14,33 @@ module ElasticAPM
         if (trace_context = transaction.trace_context)
           trace_context.apply_headers { |k, v| metadata[k.downcase] = v }
         end
-        ElasticAPM.with_span(method, TYPE) do
+
+        ElasticAPM.with_span(
+          method, TYPE,
+          subtype: SUBTYPE,
+          context: span_context(call)
+        ) do
           yield
         end
       end
       # rubocop:enable Lint/UnusedMethodArgument
+
+      private
+
+      def span_context(call)
+        peer = call.instance_variable_get(:@wrapped)&.peer
+        return unless peer
+
+        split_peer = URI.split(peer)
+        destination = ElasticAPM::Span::Context::Destination.new(
+          type: TYPE,
+          name: SUBTYPE,
+          resource: peer,
+          address: split_peer[0],
+          port: split_peer[6]
+        )
+        ElasticAPM::Span::Context.new(destination: destination)
+      end
     end
 
     # @api private
