@@ -5,21 +5,37 @@ module ElasticAPM
     class Context
       # @api private
       class Destination
-        def initialize(name: nil, resource: nil, type: nil)
+        def initialize(
+          name: nil,
+          resource: nil,
+          type: nil,
+          address: nil,
+          port: nil
+        )
           @name = name
           @resource = resource
           @type = type
+          @address = address
+          @port = port
         end
 
-        attr_reader :name, :resource, :type
+        attr_reader(
+          :name,
+          :resource,
+          :type,
+          :address,
+          :port
+        )
 
-        def self.from_uri(uri_or_str, type: 'external')
+        def self.from_uri(uri_or_str, type: 'external', port: nil)
           uri = normalize(uri_or_str)
 
           new(
             name: only_scheme_and_host(uri),
             resource: "#{uri.host}:#{uri.port}",
-            type: type
+            type: type,
+            address: uri.hostname,
+            port: port || uri.port
           )
         end
 
